clean up workspace

--- a/_layouts/hobby.html
+++ b/_layouts/hobby.html
@@ -1,6 +1,4 @@
 ---
-title: Page Does Not Exist...
-permalink: "/404.html"
 layout: default
 ---
 
@@ -15,11 +13,8 @@ layout: default
     </ul>
 </div>
 
-
-<br>
-<p>404.</p>
-<br />
-<br />
-<div class="footer">
-    <p>&copy; 2017 <a href="http://erictreacy.me">Eric Treacy</a>, unless otherwise noted.</p>
+<div class="about">
+    <div class="about__content">
+        {{ content }}
+    </div>
 </div>
