--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -22,7 +22,7 @@ layout: default
 <div class="blog">
     <h1></h1>
     <ul>
-        {% for post in site.posts %}
+        {% for post in site.blog %}
         <li>
             <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
