--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -22,9 +22,9 @@ layout: default
 <div class="blog">
     <h1></h1>
     <ul>
-        {% for post in site.blog_posts %}
+        {% for project in site.work %}
         <li>
-            <span class="date">{{ post.date | date: '%Y %b %d' }}</span> - <a href="{{ post.url }}">{{ post.title }}</a>
+            <a href="{{ project.url }}">{{ project.title }}</a>
         </li>
         {% endfor %}
     </ul>
