--- a/_layouts/hobby.html
+++ b/_layouts/hobby.html
@@ -19,7 +19,7 @@ layout: default
     </div>
 </div>
 
-<div class="blog">
+<div class="hobby">
     <h1></h1>
     <ul>
         {% for project in site.hobby %}
