--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -14,6 +14,15 @@ layout: default
 </div>
 
 <div class="about">
+
+    <div id="portraitContainer">
+        <canvas
+            id="portraitCanvas"
+            width="571"
+            height="468"
+        />
+    </div>
+
     <div class="about__content">
         {{ content }}
     </div>
