--- a/_layouts/hobbyproj.html
+++ b/_layouts/hobbyproj.html
@@ -14,16 +14,23 @@ layout: default
 </div>
 
 <div class="post">
-    	
+        
     <div class="post__title">
-    	<h1>{{ page.title }}</h1>
+        <h1>{{ page.title }}</h1>
     </div>
+
     <div class="post__date">
-    	<p>{{ page.date | date: '%B %-d, %Y' }}</p>
+        <p>{{ page.date | date: '%B %-d, %Y' }}</p>
     </div>
+    
     <div class="post__meta">
-    	<p>{{ tags_content }}</p>
+        <p>{{ tags_content }}</p>
     </div>
+    
+    <div class="post__description">
+        <p>{{ page.description }}</p>
+    </div>
+
     <div class="post__content"?>
         {{ content }}
     </div>
