--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,9 @@
     <link rel="icon" href="/assets/img/blog.png">
     <link href="https://fonts.googleapis.com/css?family=Alegreya|Roboto|Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/assets/css/default.css">
+    
     <link rel="stylesheet" type="text/css" href="/assets/css/{{ page.style }}.css">
+    <script src="/assets/js/{{ page.script }}.js"></script>
 </head>
 
 <body>
