async face randomization

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -19,7 +19,9 @@ layout: default
         <canvas id="portrait-canvas" width="571" height="468">
             <img src="/assets/img/about/original.png" alt="my face" />
         </canvas>
+        <button onclick="randomizeFace()">randomize</button>
     </div>
+
 
     <div class="about__content">
         {{ content }}
